Small adjustements on the main page

--- a/main/main_Style.css
+++ b/main/main_Style.css
@@ -95,11 +95,11 @@ h4{
 }
 
 #computedBMI{
-    color:red;
+    color:white;
     font-weight: bold;
 }
 
 #BMIgroup{
     font-style: italic;
 }
-
+    
