Finished the main page

--- a/main/main_Style.css
+++ b/main/main_Style.css
@@ -67,8 +67,7 @@ label{
     margin-left: auto;
     margin-right: auto;
     color: white;
-    margin-left: 15px;
-    max-width: 750px;
+    text-align: center;
 }
 
 h4{
@@ -79,6 +78,9 @@ h4{
 
 #BMIchart{
     padding-left: 15px;
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
 }
 
 #BMIresultDiv{
@@ -102,4 +104,20 @@ h4{
 #BMIgroup{
     font-style: italic;
 }
-    
+
+#saveBTN{
+    background-color: transparent;
+    text-transform: uppercase;
+    color: white;
+    border : 1px solid white;
+    border-radius: 3px;
+    font-size: 15px;
+    padding:3px;
+    margin-top: 15px;
+    margin-bottom: 10px;
+}
+
+#saveBTN:hover{
+    color:lightgray;
+    border-color: lightgray;
+}
